service-pod-b.yaml
apiVersion: v1
kind: Service
metadata:
  name: pod-b
  namespace: test-b
spec:
  selector:
    app: pod-b
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  clusterIP: None
